# HPseudoBool

./: HPseudoBool.cabal  README  README.md
src/: HPseudoBool.hs
